--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,10 +6,13 @@
     <nav>
         <ul>
             <li> 
-                <%= link_to 'Sobre', '#' %>
+                <%= link_to 'Inicio', root_path %>
             </li>
             <li> 
-                <%= link_to 'Contato', '#' %>
+                <%= link_to 'Sobre', sobre_path %>
+            </li>
+            <li> 
+                <%= link_to 'Contato', contato_path %>
             </li>
         </ul>
     </nav>
