--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Hellow, World <%= @nome %></h1>
-
+<div>
+    <h1>Contact List</h1>
+    <p>Gerencia seus contatos em qualquer lugar</p>
+    <p><%= link_to 'Crie sua Conta', conta_path, class: 'btn btn-primary btn-lg' %></p>
+</div>
